# appgoblin-play-scraper

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: push_pr_hook.yml  scheduled_e2e_test.yml
appgoblin_play_scraper/: exceptions.py
appgoblin_play_scraper/constants/: element.py
appgoblin_play_scraper/features/: app.py  permissions.py  reviews.py  search.py
appgoblin_play_scraper/utils/: data_processors.py  request.py
google_play_scraper/constants/: element.py
google_play_scraper/features/: app.py  permissions.py  reviews.py  search.py
google_play_scraper/utils/: request.py
tests/e2e_tests/: test_app.py  test_permissions.py  test_reviews.py  test_reviews_all.py  test_search.py
