[project]
name = "appgoblin-play-scraper"
version = "0.0.1"
description = "Google-Play-Scraper provides APIs to easily crawl the Google Play Store for Python without any external dependencies. Originally forked from JoMingyu/google-play-scraper"
authors = [
    { name = "James O'Claire" },
]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = []

[project.urls]
Repository = "https://github.com/appgoblin-dev/appgoblin-play-scraper"

[project.optional-dependencies]
dev = [
    "black>=22.6.0,<23.0.0",
    "isort>=5.10.1,<6.0.0",
    "autoflake>=1.4,<2.0.0",
    "pytest>=7.3.1,<8.0.0",
]

[tool.setuptools.packages.find]
include = ["appgoblin_play_scraper*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
